--- a/yumecan.html
+++ b/yumecan.html
@@ -8296,39 +8296,40 @@ document.getElementById('pull-ssr-guaranteed').addEventListener('click', handleS
 		// ================== 🤝 친구 시스템 (상호 수락 버전) ==================
 
 async function sendFriendRequest(targetUid, targetNickname) {
-    if (!currentUser) return alert("로그인이 필요합니다.");
-    if (currentUser.uid === targetUid) return alert("자기 자신에게는 신청할 수 없습니다.");
+    if (!auth.currentUser) return alert("로그인이 필요합니다.");
+    const myUid = auth.currentUser.uid;
+    
+    // 자기 자신 체크
+    if (myUid === targetUid) return alert("자기 자신에게는 신청할 수 없습니다.");
 
     try {
         const batch = db.batch();
         const now = firebase.firestore.FieldValue.serverTimestamp();
 
-        // 1. 내 목록에 기록 (상태: 보냄)
-        const myRef = db.collection('users').doc(currentUser.uid).collection('friends').doc(targetUid);
+        // [1] 상대방의 친구 목록에 나를 추가 (상태: received)
+        // 경로는 users / 상대UID / friends / 내UID
+        const targetRef = db.collection('users').doc(targetUid).collection('friends').doc(myUid);
+        batch.set(targetRef, {
+            nickname: currentPlayerNickname || "이름없음", // 내 닉네임
+            status: 'received',
+            updatedAt: now
+        });
+
+        // [2] 내 친구 목록에 상대방을 추가 (상태: sent)
+        // 경로는 users / 내UID / friends / 상대UID
+        const myRef = db.collection('users').doc(myUid).collection('friends').doc(targetUid);
         batch.set(myRef, {
             nickname: targetNickname,
             status: 'sent',
             updatedAt: now
         });
 
-        // 2. 상대방 목록에 기록 (상태: 받음)
-        // ✅ 규칙에 의해 friendId(여기서는 currentUser.uid)가 본인인 경우에만 write가 허용됨
-        const theirRef = db.collection('users').doc(targetUid).collection('friends').doc(currentUser.uid);
-        batch.set(theirRef, {
-            nickname: currentPlayerNickname, 
-            status: 'received',
-            updatedAt: now
-        });
-
         await batch.commit();
         alert(`[${targetNickname}]님에게 친구 요청을 보냈습니다!`);
         
-        if (typeof loadFriendList === 'function') loadFriendList();
     } catch (error) {
-        console.error("요청 실패 상세:", error);
-        // 만약 여기서도 오류가 난다면, 파이어베이스 콘솔의 'Rules'가 
-        // 제가 처음에 드린 [친구 신청 핵심 수정] 버전으로 적용되어 있는지 다시 확인해야 합니다.
-        alert("권한이 없거나 이미 요청을 보낸 상대입니다.");
+        console.error("상세 에러 확인:", error);
+        alert("권한 오류가 발생했습니다. 규칙 설정을 다시 확인해주세요.");
     }
 }
 
