--- a/yumecan.html
+++ b/yumecan.html
@@ -1533,7 +1533,7 @@ let currentCollectionGroup = '히어로 대 빌런: 각축전';
 	// ▼▼▼ [수정] 도감 그룹 관리 변수 ▼▼▼
 let currentCollectionSelection = null;
 // 탭으로 만들 그룹 목록 (순서대로 나옵니다)
-const COLLECTION_GROUPS = ['히어로 대 빌런: 각축전', '사제와 악마: 고해소', 'NPC'];
+const COLLECTION_GROUPS = ['히어로 대 빌런: 각축전', '히어로 대 빌런: 점령전', '탐정 대 마법사: 기론추리교전', '도박사: 승부사들', '초대객: 몽중관의 살인', '사제와 악마: 고해소', '탐정과 범인: 정차역', 'NPC'];
 
     // DOM이 모두 로드된 후 게임 스크립트 실행
     document.addEventListener('DOMContentLoaded', async () => {
@@ -11089,6 +11089,7 @@ function closeInspModal() {
     </script>
 </body>
 </html>
+
 
 
 
