--- a/yumecan.html
+++ b/yumecan.html
@@ -4787,7 +4787,7 @@ function challengeStage(chapterIndex, stageIndex) {
     const stageId = `${chapterIndex + 1}-${stageIndex + 1}`;
 
     // 1. 스테이지 스토리가 있고, 아직 열람하지 않은 경우
-    if (stage.stageStory && !clearedStageStories.includes(stageId)) {
+    if (stage.stageStory && stage.stageStory.length > 0 && !clearedStageStories.includes(stageId)) {
         const storyToStart = { content: stage.stageStory }; 
         
         // 스토리 완료 시 책갈피 소모 및 전투 시작을 위한 콜백 설정
@@ -7491,7 +7491,15 @@ interactiveStoryModal.addEventListener('click', handleStoryInteraction);
 document.getElementById('close-stats-modal').addEventListener('click', () => {
     document.getElementById('choice-stats-modal').classList.add('hidden');
 });
-storySkipButton.addEventListener('click', closeInteractiveStory);
+storySkipButton.addEventListener('click', () => {
+    // 스킵 시에도 콜백(전투 시작)이 있으면 실행하도록 처리
+    const callback = interactiveStoryModal.dataset.callback;
+    closeInteractiveStory();
+    if (callback) {
+        eval(callback);
+        interactiveStoryModal.dataset.callback = '';
+    }
+});
 
 // ✨ 카드 상세 스토리 페이지네이션
 detailStoryPrevButton.addEventListener('click', () => {
